--- a/src/font.scss
+++ b/src/font.scss
@@ -43,8 +43,8 @@
   src: url(./assets/fonts/PlusJakartaSans-MediumItalic.ttf);
 }
 @font-face {
-  font-family: "PlusJakartaSans-Regular";
-  src: url("./assets/fonts/PlusJakartaSans-Regular.ttf");
+  font-family: PlusJakartaSans-Regular;
+  src: url(./assets/fonts/PlusJakartaSans-Regular.ttf);
 }
 @font-face {
   font-family: PlusJakartaSans-SemiBold;
