--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,20 @@
   margin: 0;
   padding-right: 15px;
 }
+.pos {
+  position: absolute;
+  bottom: 13.2%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f0f5fd;
+  font-size: 20px;
+  height: 35px;
+  width: 35px;
+  text-align: center;
+  border-radius: 50%;
+}
+@media (min-width: 1553px) {
+  .pos {
+    bottom: 11.5%;
+  }
+}
